<resources>
    <string name="app_name">SpectrumEvo</string>
    <string name="game_cover">Cover</string>

    <string name="rating_placeholder">%.1f</string>
    <string name="relative_rating_placeholder"><b>%.1f</b>/10</string>
    <string name="rating_count_placeholder">based on %1d ratings</string>

    <string name="cover_big_placeholder">https://images.igdb.com/igdb/image/upload/t_cover_big/%1$s.jpg</string>
    <string name="cover_thumb_placeholder">https://images.igdb.com/igdb/image/upload/t_thumb/%1$s.jpg</string>

    <string name="details_cover_description">Details Cover</string>
    <string name="rate_this_game">Rate this game</string>
    <string name="spectrum_nav">Spectrum</string>
    <string name="default_nav">Default</string>

    <string name="criterion_education">Education</string>
    <string name="criterion_riddle">Riddle</string>
    <string name="criterion_communication">Communication</string>
    <string name="criterion_role">Role</string>
    <string name="criterion_exploration">Exploration</string>

    <string name="criterion_collecting">Collecting</string>
    <string name="criterion_avoidance">Avoidance</string>
    <string name="criterion_destruction">Destruction</string>
    <string name="criterion_competition">Competition</string>
    <string name="criterion_simulation">Simulation</string>

    <string name="criterion_care">Care</string>
    <string name="criterion_building">Building</string>
    <string name="criterion_microcontrol">Microcontrol</string>
    <string name="criterion_tactic">Tactic</string>
    <string name="criterion_plan">Plan</string>

    <string name="feature_start">During the game…</string>
    <string name="education_feature">…you learn something</string>
    <string name="riddle_feature">…you solve problems</string>
    <string name="communication_feature">…you communicate with characters</string>
    <string name="role_feature">…you determine the role of your hero</string>
    <string name="exploration_feature">…you explore the world around you</string>

    <string name="collecting_feature">…you collect useful resources</string>
    <string name="avoidance_feature">…you avoid increased danger</string>
    <string name="destruction_feature">…you destroy targets</string>
    <string name="competition_feature">…you compete for victory</string>
    <string name="simulation_feature">…you control the mechanism or system</string>

    <string name="care_feature">…you satisfy the needs of your characters</string>
    <string name="building_feature">…you create new objects</string>
    <string name="microcontrol_feature">…you give orders to characters</string>
    <string name="tactic_feature">…you organize coordinated interaction of characters</string>
    <string name="plan_feature">…you make plans for next steps</string>

    <string name="facade_rating">Facade (graphics, music, interface)</string>
    <string name="mechanics_rating">Mechanics (gameplay, modes, difficulty)</string>
    <string name="content_rating">Content (plot, characters, originality)</string>

    <string name="confirm">Confirm</string>
    <string name="rating_title">Rating</string>
    <string name="criteria_title">Criteria</string>
    <string name="delete_from_db">Delete</string>
    <string name="logo_description">Logo</string>

</resources>
