<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rating_page"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_start"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/care_feature"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/care_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumCare"
        app:srb_fillColor="@color/colorSpectrumCare"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/building_feature"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/building_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumBuilding"
        app:srb_fillColor="@color/colorSpectrumBuilding"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microcontrol_feature"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/microcontrol_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumMicrocontrol"
        app:srb_fillColor="@color/colorSpectrumMicrocontrol"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tactic_feature"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/tactic_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumTactic"
        app:srb_fillColor="@color/colorSpectrumTactic"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_feature"/>
    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/plan_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumPlan"
        app:srb_fillColor="@color/colorSpectrumPlan"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1"/>
</LinearLayout>