<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rating_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingStart="@dimen/medium"
    android:paddingTop="@dimen/medium"
    android:paddingEnd="@dimen/medium"
    android:paddingBottom="@dimen/big">

    <TextView
        style="@style/SpectrumPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_start" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education_feature" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/education_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumEducation"
        app:srb_fillColor="@color/colorSpectrumEducation"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riddle_feature" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/riddle_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumRiddle"
        app:srb_fillColor="@color/colorSpectrumRiddle"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/communication_feature" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/communication_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumCommunication"
        app:srb_fillColor="@color/colorSpectrumCommunication"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_feature" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/role_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumRole"
        app:srb_fillColor="@color/colorSpectrumRole"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exploration_feature" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/exploration_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumExploration"
        app:srb_fillColor="@color/colorSpectrumExploration"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />
</LinearLayout>