<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rating_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_start"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collecting_feature"
        android:textColor="@color/colorTextSecondary" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/collecting_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumCollecting"
        app:srb_fillColor="@color/colorSpectrumCollecting"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avoidance_feature"
        android:textColor="@color/colorTextSecondary" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/avoidance_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumAvoidance"
        app:srb_fillColor="@color/colorSpectrumAvoidance"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destruction_feature"
        android:textColor="@color/colorTextSecondary" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/destruction_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumDestruction"
        app:srb_fillColor="@color/colorSpectrumDestruction"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competition_feature"
        android:textColor="@color/colorTextSecondary" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/competition_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumCompetition"
        app:srb_fillColor="@color/colorSpectrumCompetition"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simulation_feature"
        android:textColor="@color/colorTextSecondary" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/simulation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@color/colorSpectrumSimulation"
        app:srb_fillColor="@color/colorSpectrumSimulation"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />
</LinearLayout>