<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rating_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingStart="@dimen/medium"
    android:paddingTop="@dimen/medium"
    android:paddingEnd="@dimen/medium"
    android:paddingBottom="@dimen/big">

    <TextView
        style="@style/SpectrumPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_game" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facade_rating" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/facade_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@android:color/holo_red_dark"
        app:srb_fillColor="@android:color/holo_red_light"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mechanics_rating" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/mechanics_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@android:color/holo_blue_dark"
        app:srb_fillColor="@android:color/holo_blue_light"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />

    <TextView
        style="@style/SpectrumSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_rating" />

    <com.iarcuschin.simpleratingbar.SimpleRatingBar
        android:id="@+id/content_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srb_borderColor="@android:color/holo_green_dark"
        app:srb_fillColor="@android:color/holo_green_light"
        app:srb_numberOfStars="10"
        app:srb_stepSize="1" />
</LinearLayout>