<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/details_cover_description"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ScrollView
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingStart="@dimen/medium"
        android:paddingTop="100dp"
        android:paddingEnd="@dimen/medium">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/medium"
            android:paddingTop="@dimen/big"
            android:paddingEnd="@dimen/medium"
            app:cardCornerRadius="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground">

                <TextView
                    style="@style/SpectrumTitleText"
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="The Elder Scrolls V: Skyrim" />

                <TextView
                    style="@style/SpectrumSecondaryText"
                    android:id="@+id/tv_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="Bethesda Game Studios" />

                <TextView
                    style="@style/SpectrumSecondaryText"
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="2011" />

                <TextView
                    style="@style/SpectrumSecondaryText"
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium"
                    app:layout_constraintTop_toBottomOf="@id/tv_date" />

                <TextView
                    style="@style/SpectrumPrimaryText"
                    android:id="@+id/tv_rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/rating_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <com.epam.valkaryne.spectrumevo.view.widgets.BarRatingView
                    android:id="@+id/bar_rating"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_rating_title"
                    app:textColor="@color/colorTextSecondary" />

                <TextView
                    style="@style/SpectrumPrimaryText"
                    android:id="@+id/tv_criteria_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/criteria_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bar_rating" />

                <com.epam.valkaryne.spectrumevo.view.widgets.WebCriteriaView
                    android:id="@+id/web_criteria"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:backgroundTint="@color/colorBackground"
                    app:labelTextColor="@color/colorTextSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_criteria_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>